--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.18.1
+  syncfusion_flutter_charts: ^20.3.60
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.4
+
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.9
+  riverpod_generator: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
