--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   freezed: ^2.5.2
   freezed_annotation: ^2.4.4
+  fl_chart: ^0.68.0
 
 
 dev_dependencies:
