--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   freezed_annotation: ^2.4.4
   fl_chart: ^0.68.0
   realm: ^3.3.0
+  flutter_native_splash: ^2.4.1
+  flutter_launcher_icons: ^0.13.1
 
 
 dev_dependencies:
@@ -69,9 +71,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/moufu-icon.png
+    - assets/images/moufu-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -98,3 +100,22 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: '#FFFFFF'
+  image: 'assets/images/moufu-logo.png'
+  color_dark: '#FFFFFF'
+  image_dark: 'assets/images/moufu-logo.png'
+  fullscreen: true
+  android_12:
+    icon_background_color: '#FFFFFF'
+    image: 'assets/images/moufu-logo.png'
+    icon_background_color_dark: '#8c5000'
+    image_dark: 'assets/images/moufu-logo.png'
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path_ios: "assets/images/moufu-icon.png"
+  image_path_android: "assets/images/moufu-logo.png"
+
