--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
   google_mobile_ads: ^5.1.0
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
@@ -75,6 +76,7 @@ flutter:
   assets:
     - assets/images/moufu-icon.png
     - assets/images/moufu-logo.png
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
