--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   google_mobile_ads: ^5.1.0
   flutter_dotenv: ^5.1.0
+  url_launcher: ^6.3.0
+  firebase_core: ^3.2.0
 
 
 dev_dependencies:
@@ -76,7 +78,7 @@ flutter:
   assets:
     - assets/images/moufu-icon.png
     - assets/images/moufu-logo.png
-    - .env
+    # - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
