--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCWLFr9dNGiiV_6H9gwbq3Lqip4fB9lSjo</string>
+	<string>AIzaSyAG8NNfKd9c5PE9f9ZxOnxKVEB1Nq9BkZc</string>
 	<key>GCM_SENDER_ID</key>
-	<string>341711922368</string>
+	<string>334403602876</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.midori.moufu</string>
 	<key>PROJECT_ID</key>
-	<string>moufu-dd365</string>
+	<string>moufu-8e50f</string>
 	<key>STORAGE_BUCKET</key>
-	<string>moufu-dd365.appspot.com</string>
+	<string>moufu-8e50f.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:341711922368:ios:6bf522c64f5c1ff6ca7925</string>
+	<string>1:334403602876:ios:f7c4ed16cca320d3c403b9</string>
 </dict>
 </plist>
