--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   realm: ^3.3.0
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
-  google_mobile_ads: ^5.1.0
+#  google_mobile_ads: ^5.1.0
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
   firebase_core: ^3.2.0
