--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
 #  google_mobile_ads: ^5.1.0
-  flutter_dotenv: ^5.1.0
+  # flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
   firebase_core: ^3.2.0
 
@@ -77,7 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/moufu-logo.png
-    - .env
+    # - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
