--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   # flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
   firebase_core: ^3.2.0
+  health: ^10.2.0
+  permission_handler: ^11.3.1
 
 
 dev_dependencies:
