--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,12 @@ dependencies:
   realm: ^3.3.0
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
-#  google_mobile_ads: ^5.1.0
-  # flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
   firebase_core: ^3.2.0
   health: ^10.2.0
   permission_handler: ^11.3.1
+  google_mobile_ads: ^5.1.0
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
@@ -79,7 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/moufu-logo.png
-    # - .env
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
