--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   permission_handler: ^11.3.1
   google_mobile_ads: ^5.1.0
   flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.3.1
 
 
 dev_dependencies:
