--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_mobile_ads: ^5.1.0
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.3.1
+  app_settings: ^5.1.1
 
 
 dev_dependencies:
